# playbox

./: .env.example  .gitignore  Architecture.md  Dockerfile  Implementation-Plan.md  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/instructions/: backend.instructions.md  chess.instructions.md  database.instructions.md  frontend.instructions.md  imposter.instructions.md  piccolo.instructions.md  quiz.instructions.md  wwm.instructions.md
.github/workflows/: ci.yml
.run/: PlayBox Backend (uvicorn).run.xml  PlayBox Backend Tests (pytest).run.xml  PlayBox Frontend (vite).run.xml  PlayBox Fullstack (compound).run.xml
backend/: .env.example  alembic.ini  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  database.py  errors.py
backend/app/games/: __init__.py
backend/tests/: __init__.py  conftest.py  test_chess.py  test_elo.py  test_imposter.py  test_piccolo.py  test_quiz.py  test_smoke.py
docs/: Architecture.md  Implementation-Plan.md
docs/games/: piccolo.md
docs/games/quiz/: README.md  drachenlord-fact-pool.md  drachenlord-seed-candidates.md  drachenlord-source-checklist.md  drachenlord-topic-map.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/core/: GamePlaceholder.tsx  Home.tsx  Layout.tsx  NotFound.tsx  PlayerNameFields.tsx  api.ts  i18n.tsx  offlineManager.ts  (+2 more)
scripts/: download_sounds.py
(+46 files in other folders)
