[project]
name = "playbox"
version = "0.1.0"
description = "Collection of small browser-based party & quiz games"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

